// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JobCard should render with default props 1`] = `
<Card
  className="root"
>
  <Section>
    <Text
      baseline={true}
      className="company"
      substandard={true}
    >
      SEEK Asia
    </Text>
    <Text
      baseline={true}
      heading={true}
    >
      Developer
    </Text>
  </Section>
  <Section
    className="footer"
  >
    <div>
      <Text
        baseline={true}
        substandard={true}
      >
        <LocationIcon />
         
        Kuala Lumpur
      </Text>
      <Text
        baseline={true}
        substandard={true}
      >
        <MoneyIcon />
         
        RM999999999 - RM999999999999
      </Text>
      <Text
        baseline={true}
        substandard={true}
      >
        <TimeIcon />
         
        1h
      </Text>
    </div>
  </Section>
</Card>
`;

exports[`JobCard should render with description props 1`] = `
<Card
  className="root"
>
  <Section>
    <Text
      baseline={true}
      className="company"
      substandard={true}
    >
      SEEK Asia
    </Text>
    <Text
      baseline={true}
      heading={true}
    >
      Developer
    </Text>
  </Section>
  <Section
    className="bodyDescription"
  >
    <Text
      baseline={true}
      substandard={true}
    >
      Hello world
    </Text>
  </Section>
  <Section
    className="footer"
  >
    <div>
      <Text
        baseline={true}
        substandard={true}
      >
        <LocationIcon />
         
        Kuala Lumpur
      </Text>
      <Text
        baseline={true}
        substandard={true}
      >
        <MoneyIcon />
         
        RM999999999 - RM999999999999
      </Text>
      <Text
        baseline={true}
        substandard={true}
      >
        <TimeIcon />
         
        1h
      </Text>
    </div>
  </Section>
</Card>
`;
